# capibara-core

./: .gitignore  .pre-commit-config.yaml  Dockerfile  FOLDER_STRUCTURE.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  docker-compose.dev.yml  env.example  install.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
config/: capibara.yaml  prometheus.yml
config/grafana/dashboards/: capibara-overview.json
examples/advanced/: data_analysis.py
examples/basic/: hello_world.py
examples/security/: safe_script.py
scripts/: install-docker.sh
src/capibara/: __init__.py
src/capibara/api/: __init__.py  health_endpoint.py  metrics_endpoint.py  server.py
src/capibara/cli/: __init__.py  main.py
src/capibara/core/: __init__.py  cache_manager.py  engine.py  prompt_processor.py  script_generator.py
src/capibara/llm_providers/: __init__.py  base.py  fallback_manager.py  groq_provider.py  openai_provider.py
src/capibara/models/: __init__.py  manifests.py  requests.py  responses.py  security.py
src/capibara/runner/: __init__.py  container_runner.py  execution_monitor.py  resource_limits.py
src/capibara/sdk/: __init__.py  client.py  exceptions.py
src/capibara/security/: __init__.py  ast_scanner.py  audit_logger.py  policy_manager.py  sandbox_config.py
src/capibara/utils/: __init__.py  config.py  fingerprinting.py  logging.py  metrics.py  validation.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_cli_integration.py  test_client_integration.py
tests/unit/: __init__.py  test_ast_scanner.py  test_cache_manager.py  test_client.py  test_container_runner.py  test_engine.py  test_llm_providers.py  test_script_generator.py
